        Reviewed by Steve Falkenburg.

Make sure we use the current FrameView's frame rect when
        going back to a cached page.

        https://bugs.webkit.org/show_bug.cgi?id=28659

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::open):



Canonical link: https://commits.webkit.org/39300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47722 268f45cc-cd09-0410-ab3c-d52691b4dbfc